--- a/package.json
+++ b/package.json
@@ -12,27 +12,25 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
-    "core-js": "^3.15.1",
-    "nuxt": "^2.15.7",
-
     "axios": "^0.24.0",
     "connect-mongo": "^4.6.0",
+    "core-js": "^3.15.1",
     "cors": "^2.8.5",
-    "discord.js": "^13.3.0",
+    "discord.js": "^13.3.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "mongoose": "^6.0.12",
+    "nuxt": "^2.15.8",
     "redis": "^3.1.2"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
     "@nuxtjs/eslint-config": "^6.0.1",
     "@nuxtjs/eslint-module": "^3.0.2",
-    "@nuxtjs/tailwindcss": "^4.2.0",
+    "@nuxtjs/vuetify": "^1.12.2",
     "eslint": "^7.29.0",
     "eslint-plugin-nuxt": "^2.0.0",
-    "eslint-plugin-vue": "^7.12.1",
-    "postcss": "^8.3.5"
+    "eslint-plugin-vue": "^7.12.1"
   }
 }
