--- a/apps/bot/package.json
+++ b/apps/bot/package.json
@@ -16,8 +16,6 @@
   "license": "MIT",
   "dependencies": {
     "@discordjs/rest": "^0.1.0-canary.0",
-    "@types/node": "^16.11.0",
-    "@types/webpack": "^5.28.0",
     "discord-api-types": "^0.23.1",
     "discord.js": "^13.2.0",
     "dotenv": "^9.0.2",
@@ -33,8 +31,11 @@
   "devDependencies": {
     "@types/glob": "^7.1.3",
     "@types/redis": "^2.8.29",
+    "@types/node": "^16.11.0",
+    "@types/webpack": "^5.28.0",
     "eslint": "^4.19.1",
     "tsc-watch": "^4.6.2",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.2",
+    "tsconfig": "*"
   }
 }
