--- a/apps/bot/tsconfig.json
+++ b/apps/bot/tsconfig.json
@@ -1,12 +1,7 @@
 {
+  "extends": "tsconfig/base.json",
   "compilerOptions": {
-    "outDir": "./build",
-    "lib": ["ES2019"],
-    "module": "CommonJS",
-    "target": "ES2019",
-    "moduleResolution": "Node",
-    "esModuleInterop": true,
-    "downlevelIteration": true
+    "outDir": "./build"
   },
   "include": ["./src/**/*"]
 }
