--- a/packages/database/tsconfig.json
+++ b/packages/database/tsconfig.json
@@ -1,13 +1,8 @@
 {
+  "extends": "tsconfig/base.json",
   "compilerOptions": {
-    "lib": ["ES2019"],
     "rootDir": "./src",
-    "outDir": "./dist",
-    "module": "CommonJS",
-    "target": "ES2019",
-    "moduleResolution": "Node",
-    "esModuleInterop": true,
-    "downlevelIteration": true
+    "outDir": "./dist"
   },
   "include": ["src"]
 }
