--- a/apps/bot/.eslintrc.json
+++ b/apps/bot/.eslintrc.json
@@ -1,12 +1,11 @@
 {
-  "extends": "eslint:recommended",
+  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
   "env": {
     "node": true,
     "es6": true
   },
-  "parserOptions": {
-    "ecmaVersion": 2017
-  },
+  "parser": "@typescript-eslint/parser",
+  "plugins": ["@typescript-eslint"],
   "rules": {
     "brace-style": [
       "error",
