--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "dev": "turbo run dev --parallel"
   },
   "devDependencies": {
-    "turbo": "latest"
+    "@typescript-eslint/eslint-plugin": "^5.14.0",
+    "@typescript-eslint/parser": "^5.14.0",
+    "turbo": "latest",
+    "typescript-eslint-parser": "^22.0.0"
   },
   "engines": {
     "npm": ">=7.0.0",
