--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -15,17 +15,17 @@
     "connect-mongo": "^4.6.0",
     "core-js": "^3.15.1",
     "cors": "^2.8.5",
-    "discord.js": "^13.3.1",
+    "database": "*",
+    "discord.js": "^13.6.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
-    "nuxt-edge": "latest",
-    "vue-discord-message": "^5.0.3",
-    "database": "*"
+    "nuxt-edge": "^2.16.0-27358576.777a4b7f",
+    "vue-discord-message": "^5.0.3"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
-    "@nuxt/bridge": "npm:@nuxt/bridge-edge@^3.0.0-27373739.0ed2d4a",
+    "@nuxt/bridge": "npm:@nuxt/bridge-edge@^3.0.0-27460489.53fbca7",
     "@nuxtjs/eslint-config": "^6.0.1",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/vuetify": "^1.12.2",
