--- a/turbo.json
+++ b/turbo.json
@@ -1,8 +1,10 @@
 {
+  "$schema": "https://turborepo.org/schema.json",
+  "baseBranch": "origin/master",
   "pipeline": {
     "build": {
       "dependsOn": ["^build"],
-      "outputs": ["dist/**", "output/**", ".nuxt/**"]
+      "outputs": ["dist/**", "build/**", ".output/**", ".nuxt"]
     },
     "lint": {
       "outputs": []
