--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -20,12 +20,12 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
-    "nuxt-edge": "^2.16.0-27358576.777a4b7f",
+    "nuxt-edge": "latest",
     "vue-discord-message": "^5.0.3"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
-    "@nuxt/bridge": "npm:@nuxt/bridge-edge@^3.0.0-27460489.53fbca7",
+    "@nuxt/bridge": "npm:@nuxt/bridge-edge",
     "@nuxtjs/eslint-config": "^6.0.1",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/vuetify": "^1.12.2",
